Fix font not showing up if the font is not installed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
 
-@font-face { font-family: Crashbow; src: 'fonts/crashbow.otf'; }
-
 :root {
   --background: #ffffff;
   --foreground: #121212;
@@ -31,8 +29,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.font-crashbow {
-  font-family: Crashbow, sans-serif;
 }
